Finished pagination and select sort, products per page

--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -29,5 +29,7 @@
   "clear_search_icon_alt": "Xóa biểu tượng tìm kiếm",
   "rating_star_alt": "Xếp hạng sao",
   "search_circle_icon_alt": "Biểu tượng tròn tìm kiếm",
-  "clear_filter_icon_alt": "Biểu tượng xóa bộ lọc"
+  "clear_filter_icon_alt": "Biểu tượng xóa bộ lọc",
+  "angle_right_icon_alt": "Biểu tượng trỏ phải",
+  "angle_left_icon_alt": "Biểu tượng trỏ trái"
 }
