--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -29,5 +29,7 @@
   "clear_search_icon_alt": "Clear search icon",
   "rating_star_alt": "Rating star",
   "search_circle_icon_alt": "Search circle icon",
-  "clear_filter_icon_alt": "Clear filter icon"
+  "clear_filter_icon_alt": "Clear filter icon",
+  "angle_right_icon_alt": "Angle right icon",
+  "angle_left_icon_alt": "Angle left icon"
 }
