Finished categories and brands filter

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -31,5 +31,6 @@
   "search_circle_icon_alt": "Search circle icon",
   "clear_filter_icon_alt": "Clear filter icon",
   "angle_right_icon_alt": "Angle right icon",
-  "angle_left_icon_alt": "Angle left icon"
+  "angle_left_icon_alt": "Angle left icon",
+  "triangle_icon_alt": "Triangle icon"
 }
