--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -31,5 +31,6 @@
   "search_circle_icon_alt": "Biểu tượng tròn tìm kiếm",
   "clear_filter_icon_alt": "Biểu tượng xóa bộ lọc",
   "angle_right_icon_alt": "Biểu tượng trỏ phải",
-  "angle_left_icon_alt": "Biểu tượng trỏ trái"
+  "angle_left_icon_alt": "Biểu tượng trỏ trái",
+  "triangle_icon_alt": "Biểu tượng tam giác"
 }
